# proxctl-bindings

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/api/: http_client.rs  mod.rs  node.rs  qemu.rs
src/resources/: mod.rs  node.rs  qemu.rs  storage.rs
tests/: node_test.rs  proxmox_api_test.rs  qemu_test.rs
