[package]
name = "proxctl-bindings"
version = "0.1.0"
authors = ["Strahinja Piperac <spiperac@denkei.org>"]
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
