[package]
name = "proxctl-bindings"
version = "0.1.0"
authors = ["Strahinja Piperac <spiperac@denkei.org>"]
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockito = "0.30"
tokio = { version = "1", features = ["full"] }