[package]
name = "proxctl-bindings"
version = "0.1.0"
authors = ["Strahinja Piperac <spiperac@denkei.org>"]
license-file = "LICENSE"
readme = "README.md"
description = "Rust bindings for Proxmox API"
repository = "https://github.com/spiperac/proxctl-bindings"
keywords = ["proxmox", "api", "bindings"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockito = "1.6.1"
